--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,5 @@
+#downloads
+downloads
 # dependencies (bun install)
 node_modules
 
@@ -32,3 +34,4 @@ report.[0-9]_.[0-9]_.[0-9]_.[0-9]_.json
 
 # Finder (MacOS) folder config
 .DS_Store
+
