--- a/package.json
+++ b/package.json
@@ -8,5 +8,10 @@
   },
   "peerDependencies": {
     "typescript": "^5"
+  },
+  "dependencies": {
+    "@aws-sdk/client-s3": "^3.879.0",
+    "aws-sdk": "^2.1692.0",
+    "fast-glob": "^3.3.3"
   }
 }
